--- a/config/_default/config.yaml
+++ b/config/_default/config.yaml
@@ -1,7 +1,7 @@
-baseURL: https://hbs-skeleton.netlify.app/
-title: Hugo Bootstrap Skeleton
-copyright: 'Copyright © 2016-{year} Razon Yang. All Rights Reserved.'
-defaultContentLanguage: en
+baseURL: https://siro-yamaneko.github.io/
+title: ぼっちエンジニアの備忘録
+copyright: 'Copyright © 2024-{year} Siro Yamaneko. All Rights Reserved.'
+defaultContentLanguage: ja
 # hasCJKLanguage: true # Uncomment it if your content contains Chinese/Japanese/Korean Languages.
 # defaultContentLanguageInSubdir: true
 # disableLanguages:
