Add Japanese language configuration to languages.yaml

--- a/config/_default/config.yaml
+++ b/config/_default/config.yaml
@@ -1,4 +1,4 @@
-baseURL: "https://siro-yamaneko.github.io/"
+baseURL: "https://github.com/Siro-Yamaneko/siro-yamaneko.github.io/"
 title: ぼっちエンジニアの備忘録
 copyright: 'Copyright © 2024-{year} Siro Yamaneko. All Rights Reserved.'
 defaultContentLanguage: ja
