--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -39,7 +39,10 @@ jobs:
           extended: true
 
       - name: Build
-        run: hugo --minify --gc --enableGitInfo -b https://projects.razonyang.com/hugo-theme-bootstrap-skeleton/
+        run: hugo --minify --gc --enableGitInfo -b https://siro-yamaneko.github.io/
+
+      - name: Disable Jekyll
+        run: echo "" > public/.nojekyll
 
       - name: Deploy 🚀
         uses: peaceiris/actions-gh-pages@v3
