--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -39,7 +39,7 @@ jobs:
           extended: true
 
       - name: Build
-        run: hugo --minify --gc --enableGitInfo -b https://siro-yamaneko.github.io/
+        run: hugo --minify --gc --enableGitInfo -b "https://github.com/Siro-Yamaneko/siro-yamaneko.github.io/"
 
       - name: Disable Jekyll
         run: echo "" > public/.nojekyll
